# talk2frank

./: AGENT.md  README.md  cycle-ola.py  helloworld.py  main.py  ola.py  pyproject.toml  rainbow.py  setup.sh  snark-server.sh  snark-vllm.sh
ears/: .gitignore  README.md  ear_guts.py  ears_nark.py  ears_snark.py  ears_snark.sh  mic_stream_whisper.py  setup.sh
eyes/: README.md  camera.yaml  insultcam.py  prompt-viz.txt
lights/: README.md  allchantest.py  black.py  constellation.py  constellation.yaml  earlight.sh  ola.py  pink.py  rainbow.py  rgbtest.py  setup.sh  twinkler.py  twinkles.yaml
remote_speaker/: README.md  __init__.py  spserver.py
snark/: README.md  __init__.py  benchmark_vlm.py  prompt-viz.txt  prompt.txt  server.py  test_phi_image.py  test_server.py  test_vlm_image.py  try-phi-image.py  try_phi_image.py  try_vlm_image.py  vlm_guts.py
vllmsnark/: README.md  benchmark_vlm.py  fast_guts.py  prompt.txt  pyproject.toml  server.py  test_server.py  try_vlm_image.py  vlm_guts.py  voice
voice/: README.md  demo.py  setup.sh  test_tts_guts.py  tryvoice.py  tts_guts.py
