[project]
name = "talk2frank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "faster-whisper>=1.2.0",
    "numpy<2.0",
    "requests>=2.32.5",
    "sounddevice>=0.5.3",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "tqdm>=4.67.1",
    "tts>=0.22",
]
