[project]
name = "talk2frank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.11.0",
    "faster-whisper>=1.2.0",
    "numpy<2.0",
    "pillow>=12.0.0",
    "qwen-vl-utils>=0.0.8",
    "requests>=2.32.5",
    "sounddevice>=0.5.3",
    "soundfile>=0.12.1",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "TTS>=0.22",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "httpx>=0.27.2",
]
