[project]
name = "talk2frank_snark"
version = "0.1.0"
description = "Snark server for talk2frank"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.11.0",
    "qwen-vl-utils>=0.0.14",
    "vllm>=0.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "httpx>=0.27.2",
]
